--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header .container {
 }
 
 div.logo {
-  background: url('/img/logo-netflix.png');
+  background: url('../img/logo-netflix.png');
   height: 50px;
   width: 150px;
   background-size: cover;
@@ -41,7 +41,7 @@ header nav a:hover {
 }
 
 .title {
-  background: url('/img/logo-House.png');
+  background: url('../img/logo-House.png');
   height: 151px;
   width: 448px;
   background-size: cover;
@@ -51,7 +51,7 @@ header nav a:hover {
   font-size: 16px;
 
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) 100%),
-    url('/img/capa-house.jpg');
+    url('../img/capa-house.jpg');
 
   height: 600px;
   background-size: cover;
